# LightField

./: CMakeLists.txt  README.md
CMake/: Config_Assimp.txt  Config_GL.txt  Config_GLFW.txt  Config_GLM.txt  Config_OpenCV.txt
Doc/: ~$$LightField.~vsdx
Models/DyingGaul/: DyingGaul.json  DyingGaul.mtl  DyingGaul_sm.obj.mtl  MvPU.json
Models/Orchid/: MvPU.json  Orchid.json  Orchid.mtl  OrchidSnD.json
Models/Room/: Room.json  VanGoghRoom.mtl
Models/Triangle/: MvPU.json  Triangle.mtl
Models/Triangles/: MvPU.json  Triangles.json  Triangles.mtl
Shaders/: Aperture.frg  Default3D.frg  Default3D.vtx  MapAperture.frg  Phong - Copy.frg  Phong.frg  Phong.vtx
Src/: CMakeLists.txt
Src/Aperture/: CMakeLists.txt  Executor.cpp  Executor.h  Main.cpp  MapShader.cpp  MapShader.h  README.md  Sar.cpp  Sar.h  SarCV.cpp  SarCV.h  SarCpp.cpp  SarCpp.h  SarGL.cpp  SarGL.h  SarNone.cpp  SarNone.h  SarShader.cpp  SarShader.h
Src/Apperture/: CMakeLists.txt  Executor.cpp  Executor.h  Main.cpp
Src/Core/: Barycentric.h  CMakeLists.txt  Camera.h  Export.h  ImgSet.cpp  ImgSet.h  JSon.cpp  JSon.h  Job.cpp  Job.h  Template.cpp  Template.h  Thread.h  Timer.h
Src/HogelDef/: CMakeLists.txt  Camera.h  Hogel.h  Plane.cpp  Plane.h
Src/LightField/: CMakeLists.txt  DoubleFrustum.cpp  DoubleFrustum.h  Executor.cpp  Executor.h  Main.cpp  Oblique.cpp  Oblique.h  README.md
Src/MvPU/: BowTie.cpp  BowTie.h  CMakeLists.txt  DoubleFrustum.cpp  DoubleFrustum.h  Executor.cpp  Executor.h  Job.cpp  Job.h  Main.cpp  README.md
Src/RadImg/: CMakeLists.txt  EPIHorImageSet.cpp  EPIHorImageSet.h  EPIVerImageSet.cpp  EPIVerImageSet.h  Image.cpp  Image.h  ImageSet.cpp  ImageSet.h  MultCamImage.cpp  MultCamImage.h  MultCamImageSet.cpp  MultCamImageSet.h  PlenOptImage.cpp  PlenOptImage.h  PlenOptImageSet.cpp  PlenOptImageSet.h
Src/Render/: Bound.h  CMakeLists.txt  Camera.h  Def.h  Mesh.cpp  Mesh.h  ModMan.cpp  ModMan.h  Model.cpp  Model.h  Node.cpp  Node.h  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VtxArrayObj.cpp  VtxArrayObj.h  VtxBufferObj.cpp  VtxBufferObj.h  VtxLst.cpp  VtxLst.h
Src/RenderCPP/: BtBasicShader.cpp  BtBasicShader.h  BtClipper.cpp  BtClipper.h  BtIntMapShader.cpp  BtIntMapShader.h  BtShader.cpp  BtShader.h  CMakeLists.txt  Clipper.cpp  Clipper.h  FrameBuffer.cpp  FrameBuffer.h  LgtObj.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TxtObj.h  Vtx.cpp  Vtx.h  VtxIdxLstObj.cpp  VtxIdxLstObj.h  VtxLstObj.cpp  VtxLstObj.h  VtxMeshObj.cpp  VtxMeshObj.h  VtxObj.h
Src/RenderGL/: BasicShader.cpp  BasicShader.h  Bound.h  CMakeLists.txt  Camera.h  Def.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Object.h  PhongShader.cpp  PhongShader.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VtxArrayObj.cpp  VtxArrayObj.h  VtxBufferObj.cpp  VtxBufferObj.h  VtxLst.cpp  VtxLst.h
Src/Renderer/: CMakeLists.txt  DoubleFrustum.cpp  DoubleFrustum.h  Executor.cpp  Main.cpp  Oblique.cpp  README.md
Src/Tasks/: Base.cpp  Base.h  CMakeLists.txt  ProofImage.cpp  ProofImage.h  ReadAvi.cpp  ReadAvi.h  SliceNDice.cpp  SliceNDice.h  WriteAvi.cpp  WriteAvi.h  WriteImg.cpp  WriteImg.h
Src/Viewer/: CMakeLists.txt  Executor.cpp  Executor.h  Main.cpp  README.md  RadImage.cpp  RadImage.h
